# ecotokens

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  code-review-report.md
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.grepai/: config.yaml  index.gob  symbols.gob
.specify/memory/: constitution.md
docs/: BENCHMARKS.md  CONTRIBUTING.md  TEST-PLAN.md  abbreviations-pipeline.md  abbreviations.md  ai-summary.md  example-configs.md  harness-feature-matrix.md  hook-filter-metrics-flow.md  mcp-server.md  models.md  secret-patterns.md  self-interference-analysis.md
specs/001-token-companion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-token-companion/checklists/: requirements.md
specs/001-token-companion/contracts/: cli-schema.md
src/: debuglog.rs  doctor.rs  install.rs  lib.rs  main.rs  pi_extension.ts
src/abbreviations/: dictionary.rs  mod.rs
src/config/: background_state.rs  mod.rs  models.rs  session_store.rs  settings.rs
src/daemon/: logger.rs  watcher.rs
src/duplicates/: detect.rs  mod.rs  proposals.rs  staleness.rs
src/embed/: candle.rs
src/filter/: ai_summary.rs  aws.rs  cargo.rs  config_file.rs  container.rs  cpp.rs  cwd.rs  db.rs  fs.rs  generic.rs  gh.rs  git.rs  go.rs  grep.rs  js.rs  markdown.rs  mod.rs  network.rs  python.rs
src/hook/: glob_handler.rs  grep_handler.rs  handler.rs  mod.rs  post_handler.rs  read_handler.rs
src/masking/: mod.rs  patterns.rs
src/mcp/: server.rs  tools.rs
src/metrics/: mod.rs  report.rs  store.rs
src/search/: embed.rs  hnsw.rs  index.rs  mod.rs  outline.rs  query.rs  symbols.rs  text_docs.rs
src/tokens/: counter.rs  mod.rs
src/trace/: callees.rs  callers.rs  mod.rs
src/tui/: gain.rs  mod.rs  outline.rs  progress.rs  trace.rs  watch.rs
tests/: helpers.rs
tests/abbreviations/: abbreviate_test.rs
tests/config/: session_store_test.rs  settings_test.rs
tests/duplicates/: detect_test.rs  integration_test.rs  mcp_test.rs  proposals_test.rs
tests/filter/: ai_summary_test.rs  aws_test.rs  cargo_test.rs  config_file_test.rs  container_test.rs  cpp_test.rs  db_test.rs  detect_family_test.rs  fs_test.rs  generic_test.rs  gh_test.rs  git_test.rs  go_test.rs  grep_test.rs  js_test.rs  markdown_test.rs  network_test.rs  python_test.rs
tests/hook/: glob_handler_test.rs  grep_handler_test.rs  handler_test.rs  post_handler_test.rs  read_handler_test.rs
tests/integration/: config_test.rs  constitution_test.rs  daemon_test.rs  doctor_test.rs  end_to_end_test.rs  fault_test.rs  filter_output_test.rs  helpers.rs  install_test.rs  mcp_test.rs  perf_test.rs  semantic_search_test.rs
tests/masking/: patterns_test.rs
tests/metrics/: clear_test.rs  report_test.rs  store_test.rs
tests/search/: embed_test.rs  index_test.rs  outline_test.rs  search_test.rs  symbols_test.rs  text_docs_test.rs  watcher_test.rs
tests/tokens/: counter_test.rs
tests/trace/: trace_test.rs
tests/tui/: gain_test.rs  helpers.rs  outline_test.rs  progress_test.rs  trace_test.rs  watch_test.rs
tests/unit/: chunking_symbol_test.rs  embed_candle_test.rs  hnsw_test.rs
