[package]
name = "ecotokens"
version = "0.1.0"
edition = "2021"
description = "Token-saving companion for Claude Code"
license = "MIT"

[features]
exact-tokens = ["tiktoken-rs"]
embeddings = ["reqwest"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.10"
lazy-regex = "3"
dirs = "5"
toml = "0.8"
ratatui = { version = "0.29", features = ["crossterm"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# P3 — index BM25 + symbolic
tantivy = "0.22"
ignore = "0.4"          # gitignore-aware file walker
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"

# P3.5 — trace + MCP server
rmcp = { version = "1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt", "macros", "io-util"] }

# P3 daemon — file watcher
notify = "6"

# Optional
tiktoken-rs = { version = "0.5", optional = true }
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }

[dev-dependencies]
tempfile = "3"

# ── Integration test targets ──────────────────────────────────────────────────
[[test]]
name = "counter_test"
path = "tests/tokens/counter_test.rs"

[[test]]
name = "settings_test"
path = "tests/config/settings_test.rs"

[[test]]
name = "patterns_test"
path = "tests/masking/patterns_test.rs"

[[test]]
name = "generic_test"
path = "tests/filter/generic_test.rs"

[[test]]
name = "git_test"
path = "tests/filter/git_test.rs"

[[test]]
name = "cargo_test"
path = "tests/filter/cargo_test.rs"

[[test]]
name = "fs_test"
path = "tests/filter/fs_test.rs"

[[test]]
name = "markdown_test"
path = "tests/filter/markdown_test.rs"

[[test]]
name = "python_test"
path = "tests/filter/python_test.rs"

[[test]]
name = "cpp_test"
path = "tests/filter/cpp_test.rs"

[[test]]
name = "config_file_test"
path = "tests/filter/config_file_test.rs"

[[test]]
name = "store_test"
path = "tests/metrics/store_test.rs"

[[test]]
name = "report_test"
path = "tests/metrics/report_test.rs"

[[test]]
name = "handler_test"
path = "tests/hook/handler_test.rs"

[[test]]
name = "install_test"
path = "tests/integration/install_test.rs"

[[test]]
name = "index_test"
path = "tests/search/index_test.rs"

[[test]]
name = "search_test"
path = "tests/search/search_test.rs"

[[test]]
name = "symbols_test"
path = "tests/search/symbols_test.rs"

[[test]]
name = "outline_test"
path = "tests/search/outline_test.rs"

[[test]]
name = "text_docs_test"
path = "tests/search/text_docs_test.rs"

[[test]]
name = "constitution_test"
path = "tests/integration/constitution_test.rs"

[[test]]
name = "end_to_end_test"
path = "tests/integration/end_to_end_test.rs"

[[test]]
name = "perf_test"
path = "tests/integration/perf_test.rs"

[[test]]
name = "fault_test"
path = "tests/integration/fault_test.rs"

[[test]]
name = "outline_tui_test"
path = "tests/tui/outline_test.rs"

[[test]]
name = "progress_tui_test"
path = "tests/tui/progress_test.rs"

[[test]]
name = "trace_test"
path = "tests/trace/trace_test.rs"

[[test]]
name = "mcp_test"
path = "tests/integration/mcp_test.rs"

[[test]]
name = "trace_tui_test"
path = "tests/tui/trace_test.rs"

[[test]]
name = "gain_tui_test"
path = "tests/tui/gain_test.rs"

[[test]]
name = "watcher_test"
path = "tests/search/watcher_test.rs"

[[test]]
name = "daemon_test"
path = "tests/integration/daemon_test.rs"

[[test]]
name = "watch_tui_test"
path = "tests/tui/watch_test.rs"
